--- a/index.css
+++ b/index.css
@@ -8,18 +8,67 @@ body {
 
 
 #nodeHolder {
-    position: absolute;
     top: 0;
     transition: opacity .1s;
     line-height: 0;
 
 
 }
+.nodeHolder{
+    margin:5px red;
+}
+#inputHolder {
+    position: absolute;
+    top: 0;       /* Align to the top of the screen */
+    left: 0;      /* Align to the left of the screen */
+    width: 50%;   /* Occupy 50% of the screen width */
+    height: 10%;  /* Occupy 50% of the screen height */
+
+}
+#outputHolder {
+    position: absolute;
+    top: 0;       /* Align to the top of the screen */
+    right: 0;      /* Align to the right of the screen */
+    width: 50%;   /* Occupy 50% of the screen width */
+    height: 10%;  /* Occupy 50% of the screen height */
+}
+#interHolder {
+    position: absolute;
+    top: 10%;    /* Start from the middle of the screen */
+    left: 0;     /* Align to the left of the screen */
+    width: 100%;  /* Occupy 50% of the screen width */
+    height: 20%; /* Occupy the remaining 50% of the screen height */
+}
+
+#inputNodes{
+    position: absolute;
+    top:30%;
+    bottom:0;
+    left:0;
+    width:100%;
+}
+#leftInput{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    left:0;
+    width:50%;
+}
+#rightInput{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right:0;
+    width:50%;
+}
+
+
 .brainNode {
     border-radius: 0%;
+    background-color: blue;
     display: inline-block;
-    height: 2vmin;
-    width: 2vmin;
+    height: 1vmin;
+    width: 1vmin;
     text-align: center;
     transition: opacity .5s;
     /* trigger hardware acceleration */
@@ -28,7 +77,7 @@ body {
     -webkit-transform-style: preserve-3d;
     will-change: transform;
     -webkit-backface-visibility: hidden;
-    line-height: 3vmin; /* Same as height */
+    line-height: 2vmin; /* Same as height */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -36,14 +85,23 @@ body {
     -ms-user-select: none;
     user-select: none;
     pointer-events: none;
-
 }
+.inputNeurons{
+    background-color: green;
+}
+.outputNeurons{
+    background-color: red;
+}
+.interNeurons{
+    background-color: blue;
+}
+
 .console {
     position:relative;
     bottom:0px;
     left:0%;
     right:0%;
-    height:20%:
+    height:20%;
     overflow-y: auto; /* Enable vertical scrolling */
     border: 0px solid #ccc; /* Optional: Add a border for aesthetics */
     z-index: -10;
